[package]
name = "binkget"
version = "0.1.0"
edition = "2021"
authors = ["Nathaniel Chappelle nathaniel.chappelle@proton.me"]
description = "A simple command line tool for downloading files using HTTP(S) protocol."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Binkersss/binkget"
repository = "https://github.com/Binkersss/binkget"
keywords = ["cli", "download", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.26.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = ["stream"] }
url = "2.5.4"
console = "0.15.10"
headers = "0.4.0"
tokio = "1.43.0"
futures-util = "0.3.31"